updated blog card area

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <main>
 	<div class="hero">
-		<h1>A Practice Site</h1>
+		<h1>A Practice Personal Site</h1>
 	</div>
 
 	<div>
@@ -83,36 +83,36 @@
 	<div id="blog-card-area">
 		<div class="blog-card">
 			<div class="blog-card-content">
-				<div class="blog-date">February 3, 2017</div>
+				<div class="blog-date">January 2016 - January 2017</div>
 				<div class="blog-title"><h1>Dominion Enterprises</h1></div>
-				<div class="blog-sample">My most recent position was Quality Assurance Analyst for a web app development team.</div>
+				<div class="blog-sample">As a quality assurance analyst for a web app development team, I worked with our product owner and project manager to develop a testing strategy and developers to ensure visual and functional accuracy. I communicated with teammembers about expecations for the product. I deployed changes to production using GitHub and Jenkins. We used Jira to track tickets. I primarily did manual testing but I also wrote basic automated tests using Selenium Webdriver and JavaScript and set up basic load testing using Apache JMeter. Our team used Scrum.</div>
 				<hr>
 				<div class="blog-author"><img src="img/sample.png" alt="headshot"> Heather Mason</div>
 			</div>
 		</div>
 		<div class="blog-card">
 			<div class="blog-card-content">
-				<div class="blog-date">February 3, 2017</div>
-				<div class="blog-title"><h1>Dominion Enterprises</h1></div>
-				<div class="blog-sample">My most recent position was Quality Assurance Analyst for a web app development team.</div>
+				<div class="blog-date">April 2015 - January 2016</div>
+				<div class="blog-title"><h1>ECPI University</h1></div>
+				<div class="blog-sample">I held several positions at ECPI University over the course of over 6 years. My last position was course development assistant. I loaded courses into our learning managment systems using HTML and CSS to format them to match course design documents. I also reviewed content for accuracy. I converted and optimized media for use in courses. I also learned, implemented, and trained teammates during a transition to a new content management system.</div>
 				<hr>
 				<div class="blog-author"><img src="img/sample.png" alt="headshot"> Heather Mason</div>
 			</div>
 		</div>
 		<div class="blog-card">
 			<div class="blog-card-content">
-				<div class="blog-date">February 3, 2017</div>
-				<div class="blog-title"><h1>Dominion Enterprises</h1></div>
-				<div class="blog-sample">My most recent position was Quality Assurance Analyst for a web app development team.</div>
+				<div class="blog-date">November 2009 - April 2015</div>
+				<div class="blog-title"><h1>ECPI University</h1></div>
+				<div class="blog-sample">Prior to completing my BS CIS degree with ECPI University, I held several roles working directly with students. Most rewarding was working directly with students to assist them with challenges they faced as students, from getting help with course material to technical assistance to dealing with personal issue. I worked in the Registrar's Office planning student schedules, registering students for classes, and processing transcripts. I also worked in the Financial Aid Department, guiding students through the financial aid process.</div>
 				<hr>
 				<div class="blog-author"><img src="img/sample.png" alt="headshot"> Heather Mason</div>
 			</div>
 		</div>
 		<div class="blog-card">
 			<div class="blog-card-content">
-				<div class="blog-date">February 3, 2017</div>
-				<div class="blog-title"><h1>Dominion Enterprises</h1></div>
-				<div class="blog-sample">My most recent position was Quality Assurance Analyst for a web app development team.</div>
+				<div class="blog-date">September 2008 - January 2010</div>
+				<div class="blog-title"><h1>Rite Aid Pharmacy</h1></div>
+				<div class="blog-sample">I worked as a Pharmacy Technician at a busy 24 hour Rite Aid Pharmacy near a hospital and emergency room. I entered and updated customer information including prescriptions, filled prescriptions for final review by the Pharmacist, and served customers.</div>
 				<hr>
 				<div class="blog-author"><img src="img/sample.png" alt="headshot"> Heather Mason</div>
 			</div>
