added meta tag to html to fix media queries, reverted css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width = device-width">
 	<title>A Practice Site</title>
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
